# rhdh-users-skill-pack

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
skills/rhdh-templates/: SKILL.md
skills/rhdh-templates/assets/: example-catalog.json
skills/rhdh-templates/references/: add-parameter.md  add-skeleton.md  add-step.md  best-practices.md  conventions.md  create-location.md  create.md  dry-run.md  example-catalog.md  explain-action.md  fix-gotchas.md  gotchas-rules.json  init.md  list-actions.md  parameter-widgets.md  template-structure.md  templatize.md  validate.md
skills/rhdh-templates/scripts/: analyze.py  command-metadata.json  create_location.py  dry_run.py  explain_action.py  fix_gotchas.py  init.py  list_actions.py  list_examples.py  scaffolder_api.py  schema_validate.py  validate.py
skills/rhdh-upgrade-helper/: SKILL.md
skills/rhdh-upgrade-helper/references/: config-analysis.md  config-scoring.md  intake-questions.md  rhdh-architecture.md  rhdh-local.md  rhdh-upgrade-helper-config.md  secrets-detection.md
skills/rhdh-upgrade-helper/workflows/: full-report.md  help.md  interactive.md
skills/skill-maker/: SKILL.md
skills/skill-maker/references/: anti-patterns.md  api-skill-patterns.md  architecture-patterns.md  consolidation-guide.md  description-guide.md  scripts-guide.md  (+1 more)
skills/upgrade-helper/: SKILL.md
tests/: conftest.py
tests/integration/: test_rhdh_templates_live.py
tests/unit/: test_claude_md.py  test_rhdh_templates.py  test_skill_structure.py
(+42 files in other folders)
