[project]
name = "rhdh-users-skill-pack"
version = "0.1.0"
description = "Agent Skills pack for Red Hat Developer Hub users"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

# No runtime dependencies - stdlib only!

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pyyaml>=6.0",  # SKILL.md structure tests
    "jsonschema>=4.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled by formatter
